gitops/apps/whoami-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
